Spisak 2: čitač kao jedan .exe, reklamacije, tabla nezavršenih, prikaz lozinke, rok za delove
ČITAČ — jedan mali .exe umesto 44 MB foldera sa Javom:
- Prepisan iz Jave u Go (go/main.go, ~5.5 MB, bez foldera i bez Jave). Logika čitanja
  preuzeta iz Java verzije, koja je isprobana na istoj kartici.
- VERIFIKOVANO na živoj kartici (Škoda Kodiaq): čita VIN, marku, model, gorivo, godinu,
  tablicu i vlasnika — svih 8 polja, ispravno.
- Sajt nudi „Preuzmi čitač" kad čitač nije pokrenut; server ga hostuje (Caddy /preuzmi/*).
- go/napravi.bat pravi .exe; go/samopokretanje.bat ga stavi u autostart (bez admin prava).
- Java distribucija (spakuj.bat jpackage, pokreni-citac.bat) uklonjena — zamenjena Go verzijom;
  CitacServer.java ostaje kao referenca iz koje je port nastao.
- Ispravan UTF-8 u prozoru (Go nema Javin problem sa srpskim slovima u konzoli).

REKLAMACIJE — nov nalog vezan za stari (migracija 007, source_work_order_id):
- Dugme „Reklamacija" na nalogu → nov nalog, vozilo/klijent preuzeti sa starog.
- Veza se vidi na oba: „Reklamacija naloga RN-…" i „Reklamiran nalogom RN-…".
- Otvara se BEZ sekcija za stavke (garancija, besplatno); dugme „Dodaj nove radove
  (naplativo)" otključava radove/delove/eksterno. Naplata radi kao i inače.

EKRAN „NEZAVRŠENI" — radionica na jedan pogled:
- Samo aktivni (Otvoren/U radu/Čeka delove), kartice grupisane po statusu i obojene po njemu.
- 4 u red na računaru, 1 u red na telefonu; naslov + linija između grupa.
- Kartica: broj, vozilo, klijent, datum, prijava kvara, + rok za delove.

ROK ZA DELOVE (migracija 007) — kod „Čeka delove", DVE odvojene kolone (datum + napomena):
- Unosi se pri prelasku na „Čeka delove"; briše se izlaskom iz statusa.
- Upozorenje „kasni" kad datum probije; prikaz na kartici Nezavršenih i na detalju.

PRIKAŽI LOZINKU — jedna komponenta PasswordInput (oko) na 3 polja: prijava, SMTP, korisnik.

Testovi: 167 provera + responsive, sve prolazi. Novo: tests/reklamacija.py (15),
tests/citac.py prepravljen za Go, 